--- a/style/style.css
+++ b/style/style.css
@@ -490,6 +490,7 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
+  background-color: white;
 }
 .portfolio .portfolio-wrap::before {
   content: "";
